--- a/datasets/create-a-dataset.mdx
+++ b/datasets/create-a-dataset.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Upload a Dataset"
+title: "Create a Dataset"
 description: "Learn how to add your own dataset to Artemis Search"
 ---
 
