--- a/machines/create-a-machine.mdx
+++ b/machines/create-a-machine.mdx
@@ -1,21 +1,18 @@
 ---
-title: "Add a Machine"
+title: "Create a Machine"
 description: "Learn how to add a machine to your Artemis Search project"
 ---
 
-Adding a machine to your Artemis Search project is a straightforward process. This guide will walk you through the steps to get a new machine up and running.
 
-## Prerequisites
-
-Before adding a machine, ensure that:
-
-- You have created a project in Artemis Search
+<Warning>
+You must have created a Project in Artemis Search before you can add a Machine. See our guide on [creating a project](/projects/create-a-project) for more information.
+</Warning>
 
 ## Steps to Add a Machine
 
 <Steps>
   <Step title="Navigate to the Project Page">
-    Open the Artemis Search dashboard and select the project you want to add a machine to.
+    Open the Artemis Search dashboard and select the project that you'd like to create a machine for.
   </Step>
   <Step title="Locate the Machines Card">
     On the project page, find the "Machines" card. This card displays a table of all current machines in your project.
@@ -30,15 +27,15 @@ Before adding a machine, ensure that:
     </Warning>
   </Step>
   <Step title="Verify Machine Status">
-    Once the machine creation process is complete, you should see the new machine listed in the Machines table with a "Running" status.
+    Once the machine creation process is complete, you should see the new machine listed in the Machines table.
   </Step>
 </Steps>
 
-## After Adding a Machine
+## After Creating a Machine
 
-Once you've successfully added a machine:
+Once you've successfully created a machine:
 
-- Your project will become active (if a dataset is active)
+- Your project will become active if you've already activated a dataset
 - The new machine will automatically start handling search requests
 - You can monitor its performance in the Project Status card on the project page
 
