--- a/machines/manage-machines.mdx
+++ b/machines/manage-machines.mdx
@@ -3,8 +3,6 @@ title: "Manage Machines"
 description: "Learn how to effectively manage machines in your Artemis Search project"
 ---
 
-Proper machine management is crucial for maintaining optimal performance and cost-efficiency in your Artemis Search projects. This guide will cover the essential aspects of managing your machines.
-
 ## Viewing Your Machines
 
 To view and manage your machines:
@@ -29,6 +27,9 @@ To view and manage your machines:
   </Card>
 </CardGroup>
 
+## Creating a Machine
+
+To create a machine, see our guide on [creating a machine](/machines/create-a-machine).
 ## Deleting a Machine
 
 To delete a machine:
@@ -49,10 +50,18 @@ To delete a machine:
   <Step title="Wait for Completion">
     Stay on the page until the deletion process is complete.
     <Warning>
-    Deleting a machine may take some time. Do not navigate away from the page during this process.
+    If you are deleting your last machine, your project will become inactive and will no longer be able to process searches.
     </Warning>
   </Step>
 </Steps>
+
+## Monitoring Machine Status
+
+You are currently unable to monitor the status of your machines. This feature is coming soon.
+
+## Viewing Machine Performance
+
+You are currently unable to view the performance of your machines. This feature is coming soon.
 
 ## Best Practices for Machine Management
 
@@ -62,9 +71,9 @@ To delete a machine:
 4. **Maintain Minimum Requirements**: Ensure at least one machine is always active for each project.
 5. **Balance Performance and Cost**: Find the right number of machines to meet your performance needs while managing costs effectively.
 
-<Tip>
+<Warning>
 Remember, your project must have at least one machine to remain active. If you delete all machines, your project will become inactive and unable to process search requests.
-</Tip>
+</Warning>
 
 ## Troubleshooting
 
