--- a/machines/understanding-machines.mdx
+++ b/machines/understanding-machines.mdx
@@ -3,19 +3,16 @@ title: "Understanding Machines"
 description: "Learn about machines in Artemis Search and how they power your intelligent searches"
 ---
 
-Machines are a core component of Artemis Search's technology, enabling high-performance, intelligent searches on your datasets. This page will help you understand what machines are, how they work, and why they're crucial for your search projects.
 
 ## What are Machines?
 
-Machines in Artemis Search are computational resources dedicated to running our advanced ML model on your active datasets.
-
-Machines are responsible for processing search requests and performing the "intelligent" searches that set Artemis Search apart from traditional search engines and RAG systems.
+Machines in Artemis Search are the computational resources that run and execute your project's searches.
 
 ## Key Concepts
 
 <AccordionGroup>
   <Accordion title="Purpose">
-    Machines run our ML model to perform reasoning-based searches on your datasets, allowing for more accurate and context-aware results.
+    Machines are responsible for handling and completing your searches.
   </Accordion>
   <Accordion title="Scalability">
     You can add multiple machines to a project to handle increased load and improve response times.
@@ -28,24 +25,6 @@ Machines are responsible for processing search requests and performing the "inte
   </Accordion>
 </AccordionGroup>
 
-## Machine States
-
-Machines in Artemis Search can be in different states:
-
-<CardGroup cols={2}>
-  <Card title="Starting" icon="rocket">
-    The machine is being initialized and prepared for use.
-  </Card>
-  <Card title="Running" icon="play">
-    The machine is active and ready to process search requests.
-  </Card>
-  <Card title="Stopping" icon="stop">
-    The machine is in the process of being shut down.
-  </Card>
-  <Card title="Stopped" icon="power-off">
-    The machine is not running and cannot process requests.
-  </Card>
-</CardGroup>
 
 ## Best Practices
 
