--- a/organizations-and-teams/managing-organizations.mdx
+++ b/organizations-and-teams/managing-organizations.mdx
@@ -3,7 +3,9 @@ title: "Managing Organizations"
 description: "Learn how to effectively manage your organization in Artemis Search"
 ---
 
-Organizations in Artemis Search allow you to group projects and team members together. This guide will walk you through the process of managing your organization.
+## What is an Organization?
+
+Organizations in Artemis Search allow you to group projects and team members together.
 
 ## Viewing Organization Details
 
