--- a/organizations-and-teams/team-management.mdx
+++ b/organizations-and-teams/team-management.mdx
@@ -3,7 +3,6 @@ title: "Team Management"
 description: "Learn how to manage team members in your Artemis Search organization"
 ---
 
-Effective team management is crucial for collaboration in Artemis Search. This guide will show you how to manage your team members, including inviting new members and managing roles.
 
 ## Viewing Team Members
 
@@ -65,12 +64,6 @@ To remove a team member from your organization:
   Removing a team member will revoke their access to all projects in your organization. Make sure this is the intended action before proceeding.
 </Warning>
 
-## Best Practices for Team Management
-
-1. Regularly review your team list to ensure it's up-to-date
-2. Remove access for members who are no longer part of your organization
-3. Use descriptive names or email addresses when inviting new members to avoid confusion
-
 ## Next Steps
 
-Now that you know how to manage your team, learn about [managing projects](/projects/manage-projects) to organize your work effectively.
+Now that you know how to manage your team, learn about [managing organizations](/organizations-and-teams/managing-organizations) to organize your work effectively.
