--- a/playground/experimenting-with-searches.mdx
+++ b/playground/experimenting-with-searches.mdx
@@ -3,7 +3,6 @@ title: "Experimenting with Searches"
 description: "Learn how to craft effective search queries and interpret results in the Artemis Search Playground"
 ---
 
-Artemis Search's intelligent search technology allows you to perform complex, reasoning-based searches on your datasets. This guide will help you experiment with different types of searches and interpret the results effectively.
 
 ## Types of Searches
 
@@ -29,7 +28,7 @@ Artemis Search's intelligent search technology allows you to perform complex, re
   <Accordion title="Attribute-based Search" >
     Search for entities with specific attributes or characteristics.
     
-    Example: "startups with female founders in the fintech industry"
+    Example: "startups selling physical products directly to consumers"
   </Accordion>
 </AccordionGroup>
 
