--- a/projects/manage-projects.mdx
+++ b/projects/manage-projects.mdx
@@ -3,27 +3,25 @@ title: "Manage Projects"
 description: "Learn how to configure, update, and maintain your Artemis Search projects"
 ---
 
-Once you've created a project in Artemis Search, you'll need to manage various aspects to ensure it's running efficiently and meeting your search needs. This guide covers the key management tasks for your projects.
+
+## Accessing a Project
+In order to manage your project, you'll first have to access it. Simply navigate to the Dashboard page and click on the project card to open the project page.
 
 ## Project Details
 
-<Accordion title="Edit Project Information">
+<Accordion title="Edit Project Details">
   To edit your project's name, description, or model type:
 
-  1. Navigate to the Project Dashboard
-  2. Click on the card with your project's name to open the project page
-  3. Make your changes
-  4. Click "Save Changes" in the top-right corner of the page
+  1. Edit details in the "Project Details" card from your project page
+  2. Click "Save Changes" in the top-right corner of the page
 </Accordion>
 
 <Accordion title="Delete a Project">
 
   To delete a project:
 
-  1. Navigate to the Project Dashboard
-  2. Click on the card with your project's name to open the project page
-  3. Click the "Delete" button in the top-right corner
-  4. Confirm the deletion when prompted
+  1. Click the "Delete" button in the top-right corner of your project page
+  2. Confirm the deletion when prompted
   <Warning>
     Deleting a project is irreversible. Make sure you want to permanently remove the project and all its associated data.
   </Warning>
@@ -95,22 +93,17 @@ Monitor your project's status using the Project Status card in the project page,
 
 ## Using the Playground
 
+The playground is a tool that allows you to experiment with your project.
+
+<Warning>
+  Your project must have an active dataset and at least one machine to use the playground.
+</Warning>
 Once your project is active (has an active dataset and at least one machine), you can use it in the playground:
 
 You can access the playground in two ways:
 
 1. Click the "Playground" button in the top-right corner of the project page
 2. Navigate to the "Playground" tab on the project page and select your project under "Project" in "Settings"
-
-In the playground, you can:
-
-- Configure search settings
-- Enter search queries
-- View paginated search results
-
-<Tip>
-  The playground is an excellent way to test and refine your search queries before integrating them into your application.
-</Tip>
 
 ## Next Steps
 
